Prepared build system for merging NXJ code.
 * Use manually maintained Ant file

 * more hierarchical directory structure

--HG--
rename : src/fi/kaimio/moviescan/Perforation.java => src/main/pcapp/fi/kaimio/moviescan/Perforation.java
rename : src/fi/kaimio/moviescan/PerforationSeries.java => src/main/pcapp/fi/kaimio/moviescan/PerforationSeries.java
rename : src/fi/kaimio/moviescan/PointCluster.java => src/main/pcapp/fi/kaimio/moviescan/PointCluster.java
rename : src/fi/kaimio/moviescan/SplitScan.java => src/main/pcapp/fi/kaimio/moviescan/SplitScan.java
rename : src/fi/kaimio/sane/ConstraintType.java => src/main/pcapp/fi/kaimio/sane/ConstraintType.java
rename : src/fi/kaimio/sane/FixedPointNumber.java => src/main/pcapp/fi/kaimio/sane/FixedPointNumber.java
rename : src/fi/kaimio/sane/FrameFormat.java => src/main/pcapp/fi/kaimio/sane/FrameFormat.java
rename : src/fi/kaimio/sane/OptionType.java => src/main/pcapp/fi/kaimio/sane/OptionType.java
rename : src/fi/kaimio/sane/OptionUnit.java => src/main/pcapp/fi/kaimio/sane/OptionUnit.java
rename : src/fi/kaimio/sane/Sane.java => src/main/pcapp/fi/kaimio/sane/Sane.java
rename : src/fi/kaimio/sane/SaneDevice.java => src/main/pcapp/fi/kaimio/sane/SaneDevice.java
rename : src/fi/kaimio/sane/SaneDeviceDescriptor.java => src/main/pcapp/fi/kaimio/sane/SaneDeviceDescriptor.java
rename : src/fi/kaimio/sane/SaneException.java => src/main/pcapp/fi/kaimio/sane/SaneException.java
rename : src/fi/kaimio/sane/SaneOptionDescriptor.java => src/main/pcapp/fi/kaimio/sane/SaneOptionDescriptor.java
rename : src/fi/kaimio/sane/ScanParameter.java => src/main/pcapp/fi/kaimio/sane/ScanParameter.java
rename : src/fi/kaimio/sane/TestSane.java => src/main/pcapp/fi/kaimio/sane/TestSane.java